--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.salmanbediya.todo_app_bq">
+    <uses-permission android:name="android.permission.CAMERA" /> <!--This is how we get permission of camera & Gallery from user -->
+    <uses-permission android:name="android.permission.GALLERY" /> <!--This is how we get permission of camera from user -->
+
    <application
         android:label="todo_app"
         android:name="${applicationName}"
