--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^4.0.4
   intl: ^0.18.1
   shared_preferences: ^2.1.2
+  lottie: ^2.3.2
+  image_picker: ^1.0.0 
 
 dev_dependencies:
   flutter_test:
