--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   intl: ^0.18.1
   shared_preferences: ^2.1.2
   lottie: ^2.3.2
-  image_picker: ^1.0.0 
+  image_picker: ^1.0.0
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
